--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -6,3 +6,15 @@
 	gpgsign = true
 [pull]
 	rebase = false
+[core]
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
+[delta]
+	navigate = true
+	light = false
+[merge]
+	conflictStyle = diff3
+[diff]
+	colorMoved = default
+
