Add SSH commit signing & AWS creds

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -17,4 +17,9 @@
 	conflictStyle = diff3
 [diff]
 	colorMoved = default
-
+[gpg]
+	format = ssh
+[tag]
+	gpgsign = true
+[gpg "ssh"]
+	allowedSignersFile = {{ .chezmoi.homeDir }}/.ssh/allowed_signers
