--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -12,6 +12,8 @@ set -gx EDITOR nvim
 set -gx VISUAL nvim
 set -gx PAGER less -R
 set -gx JAVA_HOME $(/usr/libexec/java_home -v 17)
+set -gx AWS_ACCESS_KEY_ID '{{ (bitwarden "item" "11fab685-0514-459e-83ed-b02100fc0de6").login.username }}'
+set -gx AWS_SECRET_ACCESS_KEY '{{ (bitwarden "item" "11fab685-0514-459e-83ed-b02100fc0de6").login.password }}'
 
 fish_add_path $HOME/.cargo/bin
 fish_add_path $HOME/.cabal/bin
@@ -21,7 +23,10 @@ alias vi="nvim"
 alias vim="nvim"
 alias ls="exa --long --git"
 alias cat="bat --theme=\$(defaults read -globalDomain AppleInterfaceStyle &> /dev/null && echo default || echo GitHub)"
+alias icat="kitty +kitten icat --align left"
+alias idot="dot -Tpng -Nfontname=\"Menlo\" -Nfontsize=14.0 -Grankdir=LR -Gbgcolor=transparent -Ncolor=white -Nfontcolor=white -Ecolor=white"
 
 if string match -q "$TERM_PROGRAM" "vscode"
   . (code --locate-shell-integration-path fish)
 end
+
